# defender-game

./: Cargo.toml  LICENSE.md  README.md
ports/amethyst/: Cargo.toml
ports/amethyst/resources/: bindings.ron  config.ron  display_config.ron
ports/amethyst/src/: main.rs
ports/amethyst/src/defender/: config.rs  data.rs  entity.rs  mod.rs  render.rs  state.rs
ports/amethyst/src/defender/entity/: bullet.rs  enemy.rs  mod.rs  player.rs
ports/amethyst/src/defender/math/: mod.rs
ports/amethyst/src/defender/systems/: bullet.rs  bullet_collision.rs  enemy.rs  enemy_collision.rs  mod.rs  player.rs  spawn_bullet.rs
src/: color.rs  geom.rs  lib.rs  main.rs
src/config/: mod.rs
src/gfx/: utils.rs
src/models/: bullet.rs  enemy.rs  mod.rs  player.rs
