[package]
name = "defender"
version = "0.1.0"
authors = ["Andrew Huynh <a5thuynh@gmail.com>"]
edition = "2018"

[[bin]]
name = "defender"
path = "src/main.rs"

[lib]
name = "defender"
path = "src/lib.rs"

[dependencies]
piston = "0.38.0"
piston2d-graphics = "0.27.0"
pistoncore-glutin_window = "0.50.0"
piston2d-opengl_graphics = "0.55.0"
rand = "0.5.5"
